// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preset Update works as planned:  after setting 2 falls  1`] = `
<div
  className="Card"
>
  {}
  <div
    className="CardHeader"
  >
    {}
    <span>
      Preset #
      1
    </span>
  </div>
  <div
    className="CardContent"
  >
    {
  "padding": false
}
    <span
      className="flex1 center verticalCenter"
      style={
        Object {
          "minHeight": 50,
        }
      }
      text="noPreview"
    >
      No Preview available for Preset yet.
    </span>
  </div>
  <div
    className="CardFooter"
  >
    {}
    <div
      className="Link"
    >
      {
  "text": "Update"
}
    </div>
    <div
      className="Link"
    >
      {
  "text": "ready"
}
    </div>
  </div>
</div>
`;

exports[`Preset Update works as planned:  after setting to true  1`] = `
<div
  className="Card"
>
  {}
  <div
    className="CardHeader"
  >
    {}
    <span>
      Preset #
      1
    </span>
  </div>
  <div
    className="CardContent"
  >
    {
  "padding": false
}
    <span
      className="flex1 center verticalCenter"
      style={
        Object {
          "minHeight": 50,
        }
      }
      text="noPreview"
    >
      No Preview available for Preset yet.
    </span>
  </div>
  <div
    className="CardFooter"
  >
    {}
    <div
      className="Link"
    >
      {
  "text": "Update"
}
    </div>
    <div
      className="Link"
    >
      {
  "text": "un-ready"
}
    </div>
  </div>
</div>
`;

exports[`Preset Update works as planned: Before anything 1`] = `
<div
  className="Card"
>
  {}
  <div
    className="CardHeader"
  >
    {}
    <span>
      Preset #
      1
    </span>
  </div>
  <div
    className="CardContent"
  >
    {
  "padding": false
}
    <span
      className="flex1 center verticalCenter"
      style={
        Object {
          "minHeight": 50,
        }
      }
      text="noPreview"
    >
      No Preview available for Preset yet.
    </span>
  </div>
  <div
    className="CardFooter"
  >
    {}
    <div
      className="Link"
    >
      {
  "text": "Update"
}
    </div>
    <div
      className="Link"
    >
      {
  "text": "ready"
}
    </div>
  </div>
</div>
`;

exports[`Preset Update works as planned: after updating presets preview 1`] = `
<div
  className="Card"
>
  {}
  <div
    className="CardHeader"
  >
    {}
    <span>
      Preset #
      1
    </span>
  </div>
  <div
    className="CardContent"
  >
    {
  "padding": false
}
    <img
      src="http://localhost:4201/presetPreview/1904-02-29/c1bbbbbbbbbbbbbbbbbbbbbb--2077750800000.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="CardFooter"
  >
    {}
    <div
      className="Link"
    >
      {
  "text": "Update"
}
    </div>
    <div
      className="Link"
    >
      {
  "text": "ready"
}
    </div>
  </div>
</div>
`;
